# FileCrusher

./: .gitignore  MANIFEST.in  README.md  __main__.py  requirements.txt  setup.cfg
documentation/: .~lock.TestTables.ods#  TestTables.ods
src/: batch_processor.py
src/compressor/: advpng_compressor.py  cpdfsqueeze_compressor.py  pdf_compressor.py  png_compressor.py  pngcrush_compressor.py  pngquant_compressor.py  processor.py
src/compressor/converter/: image_to_pdf_converter.py  pdf_to_image_converter.py
src/compressor/tests/: test_cpdf_compressor.py
src/file_crusher/: CompressionPostprocessor.py  __init__.py  advpng_compressor.py  cpdfsqueeze_compressor.py  file_operations.py  pdf_compressor.py  pipeline_processor.py  png_compressor.py  pngcrush_compressor.py  pngquant_compressor.py
src/file_crusher/converter/: image_to_pdf_converter.py  pdf_to_image_converter.py
src/file_crusher/tests/: test_cpdf_compressor.py
src/tests/: test_batch_processing.py
src/tests/temporary_files/: e6e1e962-0a08-4eb7-afc3-c629e5d6b85c
src/tests/temporary_files/d3e26812-5976-4343-9035-3127f96e8e91/: testFile_page_1
tests/: test_cpdf_compressor.py
tests/test_data/: source_test_file.odt
