[metadata]
name = file_crusher
version = 0.1
description = TODO
long_description = README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE.md
author = Philip Dell
url = TODO
project_urls =
    Bug Reports = TODO
    Funding = TODO
    Source = TODO
keywords = compression pdf png
[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6, <4
[options.packages.find]
where = src
