[metadata]
name = file_crusher
version = 0.1.1
description = Compresses PDFs with PNG compression.
long_description = README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE.md
author = Philip Dell
url = https://github.com/pilip-d/FileCrusher.git
project_urls =
    Bug Reports = https://github.com/pIlIp-d/PDF-Compressor/issues
    Source = https://github.com/pilip-d/FileCrusher.git
keywords = compression pdf png goodnotes file crusher crunch compress size limit
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS independent
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Topic :: Utilities
    Topic :: File Formats
[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6, <4
install_requires =
# TODO downgrade to minimal working versions
    img2pdf>=0.5.1
    pillow>=10.2.0
    PyMuPDF>=1.23.25
    pytesseract>=0.3.10
[options.packages.find]
where = src
[options.entry_points]
